--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "node-geocoder": "^3.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-geolocation": "^1.0.4",
